--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1 id="heading"><u>साहित्य संग्रह</u></h1>
 <div class="Icons">
 <div class="link">
-<p><a class="happy" href=".\code.html"><b>कविता संग्रह</b></a></p>
+<p><a class="happy" href=" https://vipul-tiwari.github.io/kavitasangraha/"><b>कविता संग्रह</b></a></p>
 </div>
 <div class="link">
 <p><a class="happy" href="#"><b>लेख संग्रह</b></a></p>
@@ -22,10 +22,10 @@
 </div>
 <div class="Footer">
 <p id="share"> Share to</p>
-<a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
+<a href="http://www.facebook.com/sharer.php?u= https://vipul-tiwari.github.io/sahityasangraha/" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" width=30px; height=30px; />
     </a>
-<a id="twitter" href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
+<a id="twitter" href="https://twitter.com/share?url= https://vipul-tiwari.github.io/sahityasangraha/&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" width=30px; height=30px; />
     </a>
 <p id="name">&#169; happy enterprises</p>
